--- a/assets/css/singleblog.css
+++ b/assets/css/singleblog.css
@@ -126,152 +126,212 @@ p {
 .hero-text h2 {
     color: #ffffff99;
 }
-#single_product{
-   margin-bottom: 13rem;
-}
-.one-product{
-    display: flex;
+#single_blog{
     margin-top: 10rem;
-    gap: 7rem;
+    margin-bottom: 10rem;
 }
-.one-product .product-text{
-    width: 57rem;
+.singleblog-area{
+    display: flex;
+}
+.blog-card{
     display: flex;
     flex-direction: column;
     gap: 2rem;
 }
-.one-product .product-text .rating{
-   display: flex;
-   gap: 1rem;
+.blog-card .image{
+    width: 73rem;
+    height: 49.7rem;
 }
-.one-product .product-text h1{
-    font-size: 3rem;
+.blog-card h1{
+    font-size: 3.2rem;
     color: #000;
 }
-.one-product .product-text p{
+.blog-card .text1{
+    width: 75rem;
+}
+.blog-card .text2{
+    width: 75rem;
+}
+.blog-card p{
+    color: #000;
+    font-size: 1.6rem;
+}
+.singleblog-area form input{
+    width: 31.6rem;
+    height: 5.2rem;
+    position: relative;
+    margin-bottom: 5rem;
+}
+.singleblog-area .input-search{
+    position: absolute;
+    bottom: 10rem;
+    right: 10rem;
+    font-size: 2rem;
+    color: #000;
+}
+.types{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 5rem;
+}
+.types h1{
+    color: #000;
+}
+.types a{
+    color: #000;
+    font-size: 1.5rem;
+    transition: .5s;
+}
+.types a:hover{
+    color: #B7472A;
+}
+.blog{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem; 
+    margin-bottom: 5rem;
+}
+.blog .image{
+    width: 17rem;
+    height: 7rem;
+}
+.blog h1{
+    color: #000;
+}
+.blog .blog-card .card-text{
+    display: flex;
+    gap: 2rem;
+    width: 30rem;
+}
+.blog .blog-card .card-text a{
+    color: #000;
+    font-size: 1.7rem;
+}
+.blog .blog-card .date{
+   display: flex;
+   gap: 2rem;
+   margin-left: 9rem;
+}
+.blog .blog-card .date .calendar{
+    display: flex;
+    gap: 1rem;
+}
+.blog .blog-card .date .calendar i,.year{
+    color: #000;
+}
+.blog .blog-card .date .message{
+    display: flex;
+    gap: 1rem;
+}
+.blog .blog-card .date .message i,.year{
+    color: #000;
+}
+.cloud{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 5rem;
+}
+.cloud h1{
+    margin-bottom: 2rem;
+    color: #000;
+}
+.cloud .three-button{
+    display: flex;
+    gap: 1rem;
+}
+.cloud .two-button{
+    display: flex;
+    gap: 1rem;
+}
+.cloud button{
+    padding: .5rem 1rem;
+    border: 1px solid #000;
+    background: none;
+}
+.paragraph h1{
+    margin-bottom: 2rem;
+    color: #000;
+}
+.paragraph p{
+    color: #000;
+    font-size: 1.5rem;
+}
+.four-button{
+    margin-top: 3rem;
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 3rem;
+}
+.four-button button{
+    padding: .5rem 1rem;
+    border: 1px solid #000;
+    background: none;
+}
+.george{
+    width: 73rem;
+    height: 22.3rem;
+    background-color: #0000000D;
+    display: flex;
+    padding: 3rem;
+    gap: 4rem;
+}
+.george .image{
+    width: 14.4rem;
+    height: 14.4rem;
+}
+.george .george-text{
+    width: 50rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.george .george-text h1{
+    color: #000;
+}
+.george .george-text p{
     font-size: 1.6rem;
     color: #000;
 }
-.one-product .image{
-   width: 54rem;
-   height: 81rem;
+.comment-form{
+    margin-top: 8rem;
 }
-.one-product .product-text .count{
+.comment-form h1{
+    margin-bottom: 4rem;
+}
+.form-box{
+    width: 73rem;
+    height: 75.7rem;
+    background-color: #0000000D;
+    padding: 4.5rem;
+}
+.form-box form{
     display: flex;
-    gap: 1rem;
+    flex-direction: column;
 }
-.one-product .product-text .min,.max{
-    width: 4.3rem;
-    height: 4rem;
-    border: 1px solid #000;
-    font-weight: bold;
-    font-size: 2rem;
+.form-box form input{
+    width: 63.4rem;
+    height: 5.2rem;
+    border: 1px solid #fff;
 }
-.one-product .product-text .number{
-    width: 13.6rem;
-    height: 4rem;
-    border: 1px solid #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.form-box form textarea{
+    width: 63.4rem;
+    height: 22.2rem;
+    border: 1px solid #fff;
 }
-.one-product .product-text .cart{
-    display: flex;
-    gap: 1rem;
+.form-box form label{
+    font-size: 1.6rem;
+    color: #000;
 }
-.one-product .product-text .cart .add{
-   width: 17.6rem;
-   height: 5.6rem;
-   background-color: #B7472A;
-   border: 1px solid #B7472A;
-   border-radius: .5rem;
-   font-size: 1.5rem;
-   color: #fff;
-}
-.one-product .product-text .piece{
-   color: #000;
-   font-size: 1.6rem;
- }
-.one-product .product-text .cart .buy{
-    width: 15.5rem;
+.form-box .post{
+    width: 14.9rem;
     height: 5.6rem;
     background-color: #B7472A;
-   border: 1px solid #B7472A;
-   border-radius: .5rem;
-   font-size: 1.5rem;
-   color: #fff;
- }
- .three-div{
-    display: flex;
-    margin-top: 10rem;
-    margin-bottom: 3rem;
-    gap: 1rem;
- }
- .description{
-    width: 18.2rem;
-    height: 8.1rem;
-    background-color: #B7472A;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
- .manufacturer, .reviews{
-    width: 18.2rem;
-    height: 8.1rem;
-    background-color: #0000000D;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
- .manufacturer{
-    transition: .5s;
- }
- .manufacturer:hover{
-    background-color: #B7472A;
- }
- .reviews{
-    transition: .5s;
- }
- .reviews:hover{
-    background-color: #B7472A;
- }
- .description p{
-    font-size: 2.2rem;
     color: #fff;
- }
- .manufacturer p{
-    color: #000;
-    font-size: 2.2rem;
-    transition: .5s;
- }
- .reviews p{
-    color: #000;
-    font-size: 2.2rem;
-    transition: .5s;
- }
- .manufacturer:hover p{
-    color: #fff;
- }
- .reviews:hover p{
-    color: #fff;
- }
- .degree-text{
-    width: 111rem;
-    height: 24.5rem;
-    background-color: #0000000D;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem;
- }
- .degree-text h1{
-    color: #000;
-    font-size: 2.8rem;
- }
- .degree-text p{
-    color: #000;
-    font-size: 1.6rem;
- }
+    border: 1px solid #B7472A;
+    margin-top: 2rem;
+}
 #footer_area {
     height: 40rem;
     background-color: #1a1a1a;
@@ -498,22 +558,47 @@ p {
         display: block;
         font-size: 2rem;
     }
-    .one-product{
+    .singleblog-area{
         display: flex;
         flex-direction: column;
     }
-    .one-product .product-text{
-        width: 37rem;
+    .blog-card .image{
+        width: 39rem;
+        height: 49.7rem;
     }
-    .one-product .image{
-        width: 38rem;
-        height: 81rem;
-     }
-    .degree-text{
-        height: 43rem;
-        width: 38rem;
-     }
-
+    .blog-card .text1{
+        width: 39rem;
+    }
+    .blog-card .text2{
+        width: 39rem;
+    }
+    .george{
+        width: 39rem;
+        height: 32.3rem;
+    }
+    .form-box{
+        width: 39rem;
+        margin-bottom: 5rem;
+    }
+    .form-box form input{
+        width: 30.4rem;
+    }
+    .form-box form textarea{
+        width: 30.4rem;
+    }
+    .types{
+     width: 39rem;
+    }
+    .blog{
+        width: 39rem;
+    }
+    .blog .image{
+        width: 17rem;
+        height: 7rem;
+    }
+    .paragraph{
+        width: 39rem;
+    }
     #footer_area {
         height: 120rem;
     }
@@ -526,3 +611,4 @@ p {
         font-size: 1.3rem;
     }
 }
+
